# detectflow-parser

./: .gitignore  LICENSE  README.md  SUPPORTED_SIGMAS.md  pyproject.toml
src/schema_parser/: __init__.py  const.py  manager.py  query_normalizer.py
src/schema_parser/core/: exceptions.py  utils.py
src/schema_parser/functions/: __init__.py  base.py  drop.py  extract.py  parse_json.py  regex.py  rename.py  set.py
src/schema_parser/functions/parse_win_event_log/: __init__.py  field_mapping.csv  parser.py
src/schema_parser/parsers/: __init__.py  windows_event.py
src/schema_parser/tests/: test_drop.py  test_event_parser.py  test_extract.py  test_manager.py  test_parse_json.py  test_query_normalizer.py  test_regex.py  test_rename.py  test_set.py  test_utils.py
