[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schema-parser"
version = "0.2.3"
description = "DSL pipeline for parsing and transforming events"
requires-python = ">=3.10"
dependencies = [
    "flatten-dict>=0.4.2",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/schema_parser"]
include = ["src/schema_parser/py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

